import { Router, Request, Response } from 'express';
import { authenticateJWT } from '../auth/middleware';
import { operatorOrAdmin } from '../auth/rbac';
import { AuthenticatedRequest } from '../auth/types';
import { logger } from '../observability';

const router = Router();

/**
 * GET /api/v1/invoices
 *
 * Search invoices (operator+)
 *
 * NOTE: This is a placeholder. Full implementation requires audit-logger gRPC client.
 */
router.get('/', authenticateJWT, operatorOrAdmin, async (req: Request, res: Response) => {
  const authReq = req as AuthenticatedRequest;

  try {
    // TODO: Implement audit-logger gRPC client query
    logger.info({
      request_id: authReq.requestId,
      user_id: authReq.user?.userId,
      filters: req.query,
      msg: 'Invoice search requested (placeholder)',
    });

    // Placeholder response
    res.json({
      invoices: [],
      total: 0,
      filters: req.query,
      note: 'Audit-logger integration pending',
    });
  } catch (err) {
    const error = err as Error;
    logger.error({
      request_id: authReq.requestId,
      error: error.message,
      msg: 'Invoice search failed',
    });
    res.status(500).json({ error: 'Failed to search invoices' });
  }
});

/**
 * GET /api/v1/invoices/:id
 *
 * Get invoice details (operator+)
 */
router.get('/:id', authenticateJWT, operatorOrAdmin, async (req: Request, res: Response) => {
  const authReq = req as AuthenticatedRequest;
  const invoiceId = req.params.id;

  try {
    // TODO: Query audit-logger for invoice details
    logger.info({
      request_id: authReq.requestId,
      user_id: authReq.user?.userId,
      invoice_id: invoiceId,
      msg: 'Invoice details requested (placeholder)',
    });

    res.json({
      invoice_id: invoiceId,
      note: 'Audit-logger integration pending',
    });
  } catch (err) {
    const error = err as Error;
    logger.error({
      request_id: authReq.requestId,
      error: error.message,
      msg: 'Get invoice details failed',
    });
    res.status(500).json({ error: 'Failed to retrieve invoice' });
  }
});

/**
 * GET /api/v1/invoices/:id/audit
 *
 * Get invoice audit trail (operator+)
 */
router.get('/:id/audit', authenticateJWT, operatorOrAdmin, async (req: Request, res: Response) => {
  const authReq = req as AuthenticatedRequest;
  const invoiceId = req.params.id;

  try {
    // TODO: Query audit-logger for audit trail
    logger.info({
      request_id: authReq.requestId,
      user_id: authReq.user?.userId,
      invoice_id: invoiceId,
      msg: 'Invoice audit trail requested (placeholder)',
    });

    res.json({
      invoice_id: invoiceId,
      audit_trail: [],
      note: 'Audit-logger integration pending',
    });
  } catch (err) {
    const error = err as Error;
    logger.error({
      request_id: authReq.requestId,
      error: error.message,
      msg: 'Get audit trail failed',
    });
    res.status(500).json({ error: 'Failed to retrieve audit trail' });
  }
});

export default router;
